Inserting my avatar and using flexbox

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
           <p>alvarocasadoc</p>
         </a>
     </div>
+    <div class="assistant">
+        <a href="https://github.com/Cotel" target="_blank">
+          <img src="https://avatars2.githubusercontent.com/u/9035239?s=400&u=69fe17edfbf8052c0c59e09a8deda1faa2aea927&v=4" class="avatar">
+          <p>@Cotel</p>
+        </a>
+    </div>
   </div>
 </section>
