Añadida mi foto

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link href="css/reset.css" rel="stylesheet" type="text/css">
@@ -14,9 +14,9 @@
 <section class="hacktoberfest-decription">
   <div class="board">
     <div class="assistant">
-        <a href="https://github.com/alvarocasadoc" target="_blank">
-          <img class="avatar" src="assets/img/assistants/alvarocasadoc.jpeg">
-          <p>alvarocasadoc</p>
+        <a href="https://github.com/santoguille" target="_blank">
+          <img class="avatar" src="santoguille1.png">
+          <p>santoguille</p>
         </a>
     </div>
   </div>
