Style changed + adding Vlady photo

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 </header>
 <section class="hacktoberfest-decription">
   <div class="board">
-    <div class="assistant">
+    <div class="assistant paddingXD">
         <a href="https://github.com/alvarocasadoc" target="_blank">
           <img class="avatar" src="assets/img/assistants/alvarocasadoc.jpeg">
           <p>alvarocasadoc</p>
+        </a>
+    </div>
+
+    <div class="assistant paddingXD">
+        <a href="https://github.com/SrVladyslav" target="_blank">
+          <img class="avatar" src="assets/img/assistants/vlad.jpeg">
+          <p style>Sr_Vladyslav</p>
         </a>
     </div>
   </div>
