Added new profile: sanesedu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
           <img class="avatar" src="assets/img/assistants/alvarocasadoc.jpeg">
           <p>alvarocasadoc</p>
         </a>
+        <a href="https://github.com/sanesedu" target="_blank">
+          <img class="avatar" src="assets/img/assistants/profile.jpg">
+          <p>sanesedu</p>
+        </a>
     </div>
   </div>
 </section>
