--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="board">
     <div class="assistant">
         <a href="https://github.com/santoguille" target="_blank">
-          <img class="avatar" src="santoguille1.png">
+          <img class="avatar" src="assets/img/assistants/santoguille.png">
           <p>santoguille</p>
         </a>
     </div>
