--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
           <p>alvarocasadoc</p>
         </a>
     </div>
+	<div class="assistant">
+        <a href="https://github.com/jlmartinnavarro/" target="_blank">
+          <img class="avatar" src="assets/img/assistants/pepe.png">
+          <p>Jlmartinnavarro</p>
+        </a>
+    </div>
   </div>
 </section>
