--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 </header>
 <section class="hacktoberfest-decription">
   <div class="board">
-    <div class="assistant">
+  	<div class="assistant">
         <a href="https://github.com/alvarocasadoc" target="_blank">
           <img class="avatar" src="assets/img/assistants/alvarocasadoc.jpeg">
           <p>alvarocasadoc</p>
+        </a>
+    </div>
+    <div class="assistant">
+        <a href="https://github.com/asicoderpower" target="_blank">
+          <img class="avatar" src="assets/img/assistants/IMG-20170831-WA0016.jpg">
+          <p>asicoderpower</p>
+        </a>
+    </div>
+    <div class="assistant">
+        <a href="https://github.com/" target="_blank">
+          <img class="avatar" src="assets/img/assistants/4a9f0e85d9905586cf82c8a4d0059a786e50e9bdr1-480-480v2_00.jpg">
+          <p>Luxter29</p>
         </a>
     </div>
   </div>
