--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
           <p>alvarocasadoc</p>
         </a>
     </div>
+    <div class="assistant">
+      <a href="https://github.com/dredonieto" target="_blank">
+        <img class="avatar" src="assets/img/assistants/dredonieto.jpg">
+        <p>dredonieto</p>
+      </a>
+  </div>
   </div>
 </section>
