--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
           <p style>Sr_Vladyslav</p>
         </a>
     </div>
+
+    <div class="assistant paddingXD">
+        <a href="https://github.com/carmenmbm" target="_blank">
+          <img class="avatar" src="assets/img/assistants/carmen.png.jpeg">
+          <p style>Carmen</p>
+        </a>
+    </div>
   </div>
 </section>
