--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <section class="hacktoberfest-decription">
   <div class="board">
     <div class="assistant">
-        <a href="https://github.com/alvarocasadoc" target="_blank">
-          <img class="avatar" src="assets/img/assistants/alvarocasadoc.jpeg">
-          <p>alvarocasadoc</p>
+        <a href="https://github.com/mko010" target="_blank">
+          <img class="avatar" src="assets/img/assistants/migue.jpg">
+          <p>mko010</p>
         </a>
     </div>
   </div>
