Add a xavidotcat profile

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
           <p>alvarocasadoc</p>
         </a>
     </div>
+        
+    <div class="assistant">
+        <a href="https://github.com/alvarocasadoc" target="_blank">
+          <img class="avatar" src="assets/img/assistants/xavidotcat.jpg">
+          <p>xavidotcat</p>
+        </a>
+    </div>
   </div>
 </section>
