--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="assistant paddingXD">
         <a href="https://github.com/carmenmbm" target="_blank">
-          <img class="avatar" src="assets/img/assistants/carmen.png.jpeg">
+          <img class="avatar" src="assets/img/assistants/carmen.png">
           <p style>Carmen</p>
         </a>
     </div>
