--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
           <p>@Cotel</p>
         </a>
     </div>
+    <div class="assistant">
+      <a href="https://github.com/diphendara" target="_blank">
+        <img class="avatar" src="assets/img/assistants/cristiancv.jpg">
+        <p>Diphendara</p>
+      </a>
+    </div>
   </div>
 </section>
